Feature #11551
Update Jenkinsfile so that the parent POM version is correctly computed with
when building a PR

Fix some code smells identified by SonarQube